[package]
name = "prepare-snapshot"
version = "0.1.0"
description = "Tool to prepare snapshot for Hydration Fuzzer"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/hydration-fuzzers"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/hydration-fuzzers"

[dependencies]
tokio = { workspace = true }

hydradx-runtime = { workspace = true }
hydradx-traits = { workspace = true }
primitives = { workspace = true }
scraper = { workspace = true }
pallet-asset-registry = { workspace = true }
pallet-omnipool = { workspace = true }
pallet-stableswap = { workspace = true }
pallet-xyk = { workspace = true }
pallet-ema-oracle = { workspace = true }
pallet-dynamic-fees = { workspace = true }
pallet-transaction-multi-payment = { workspace = true }
pallet-evm-accounts = { workspace = true }

codec = { workspace = true }

frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-remote-externalities = { workspace = true }

sp-core = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }

orml-tokens = { workspace = true }
orml-traits = { workspace = true }

pallet-balances = { workspace = true }
pallet-collective = { workspace = true }
pallet-multisig = { workspace = true }
pallet-proxy = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-utility = { workspace = true }

pallet-evm = { workspace = true }

[features]
default = ["std", "try-runtime"]
std = ["hydradx-runtime/std", "codec/std", "sp-runtime/std", "frame-support/std", "sp-consensus-aura/std"]
try-runtime = ["hydradx-runtime/try-runtime", "frame-support/try-runtime"]
